--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.101.1
-packaging==20.9
-pydantic==1.10.2
+packaging==21.3
+pydantic==1.10.4
+PyYAML==6.0.1
 Requests==2.31.0
-torch==1.13.1
-tqdm==4.64.1
+torch==2.0.1
+tqdm==4.65.0
 transformers==4.32.0.dev0
 uvicorn==0.23.2
