--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-model_name: "TabbyML/StarCoder-1B"
-tokenizer_name: "TabbyML/StarCoder-1B"
+model_name: "bigcode/starcoderbase-3b "
+tokenizer_name: "bigcode/starcoderbase-3b "
 load_in_8bit: False
-load_in_4bit: True
+load_in_4bit: False
